Add to cart and remove cart

--- a/amazon_clone_app/src/Header.css
+++ b/amazon_clone_app/src/Header.css
@@ -14,3 +14,50 @@
   margin: 0 20px;
   margin-top: 18px;
 }
+.header__searchIcon {
+  height: 22px;
+  background-color: #cd9042;
+  padding: 5px;
+}
+.header__search {
+  display: flex;
+  align-items: center;
+  flex: 1;
+}
+.header__searchInput {
+  height: 12px;
+  padding: 10.6px;
+  border: none;
+  width: 90%;
+}
+.header__nav {
+  display: flex;
+  justify-content: space-evenly;
+}
+.header__option {
+  display: flex;
+  flex-direction: column;
+  margin-left: 10px;
+  margin-right: 10px;
+  color: white;
+}
+.header__optionLineOne {
+  font-size: 10px;
+}
+.header__optionLineTwo {
+  font-size: 13px;
+  font-weight: 800;
+}
+.shoppingCart {
+  color: white;
+}
+.header__optionBasket {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-bottom: 10px;
+  color: white;
+}
+.header__basketCount {
+  margin-bottom: -3px;
+}
